--- a/src/main/resources/templates/th/member/mypage/profile/allFollowing.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allFollowing.html
@@ -37,11 +37,13 @@
                     <p class="user-header__follow">
                         팔로우<span class="user-header__follow__follower" th:text="${followCount}"/>|팔로잉<span class="user-header__follow__follower" th:text="${followingCount}"/>
                     </p>
+                    <div th:if="${mem} != ${member.memberId}">
                     <button th:if="${fcount == 0}" class="btn user-header__btn user-header__btn--follow"
                             id="follow" name="follow">팔로우</button><!--data-user="4247188" data-user는 오늘의집 내에서 idNumber 값인듯 지워도 될듯?-->
                     <button th:if="${fcount == 1}" class="btn user-header__btn user-header__btn--follow"
                             id="followcancel" name="followcancel">팔로우취소</button>
                     <input type="hidden" id="memberId" name="memberId" th:value="${member.memberId}"/>
+                    </div>
                 </div>
             </header>
             <div class="myhome-nav">
@@ -58,24 +60,23 @@
             </div>
             <div id="content">
                 <div class="title">팔로잉</div>
-                <div id="users" ><!--th:if="${followingCount != 0}"-->
-                    <div  class="user" ><!--th:id="${follow?.memberId}"-->
+                    <div id="users" th:each="follow : ${following}"><!--th:if="${followingCount != 0}"-->
                         <div th:if="${followingCount == 0}" id="empty_message"><p>팔로잉한 사용자가 없습니다.</p></div>
-                        <th:block th:if="${followingCount != 0}" th:each="follow : ${following}">
-                        <a target="_blank" th:href="@{/member/memberProfile/{memberId}(memberId=${follow.memberId})}">
-                            <div class="comment-feed__item__content" >
-                                <img th:if="${follow?.memberImg != null}" class="image" th:src="@{'/uploadImg'+${follow?.memberImg}}"
-                                     th:attr="srcset=|@{'/uploadImg'+${follow?.memberImg}} 1.5x,
-                                                      @{'/uploadImg'+${follow?.memberImg}} 2x,
-                                                      @{'/uploadImg'+${follow?.memberImg}} 3x|">
-                                <img th:if="${follow?.memberImg == null}" class="comment-feed__item__content__author__image" th:src="@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'}"
-                                     th:attr="srcset=|@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 1.5x,
-                                                      @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 2x,
-                                                      @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 3x|">
-                            </div><!-- 팔로워의 프로필 이미지 들어가야함 -->
-                            <div class="name" th:text="${follow.memberId}"></div><!--class="card-detail-writer__image"--><!--STYLE="WIDTH: 30PX; HEIGHT: 30PX;"-->
-                        </a>
-                        </th:block>
+                        <div th:if="${followCount != 0}" class="user" th:id="${follow.followId}">
+                            <a target="_blank" th:href="@{/member/memberProfile/{memberId}(memberId=${follow.memberId})}">
+                                <div class="comment-feed__item__content" >
+                                    <img th:if="${follow?.memberImg != null}" class="image" th:src="@{'/uploadImg'+${follow?.memberImg}}"
+                                         th:attr="srcset=|@{'/uploadImg'+${follow?.memberImg}} 1.5x,
+                                                          @{'/uploadImg'+${follow?.memberImg}} 2x,
+                                                          @{'/uploadImg'+${follow?.memberImg}} 3x|">
+                                    <img th:if="${follow?.memberImg == null}" class="image" th:src="@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'}"
+                                         th:attr="srcset=|@{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 1.5x,
+                                                          @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 2x,
+                                                          @{'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'} 3x|">
+                                </div><!-- 팔로워의 프로필 이미지 들어가야함 -->
+                                <div class="name" th:text="${follow.memberId}"></div><!--class="card-detail-writer__image"--><!--STYLE="WIDTH: 30PX; HEIGHT: 30PX;"-->
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
