--- a/src/main/resources/templates/th/member/mypage/profile/myBoard.html
+++ b/src/main/resources/templates/th/member/mypage/profile/myBoard.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <div class="user-show-layout">
         <div class="container">
+            <th:block th:replace="th/fragments/navBar_myPage"></th:block>
             <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
             <div class="row">
                 <div class="col-12 col-lg-3 wrap--profile">
@@ -39,12 +39,14 @@
                                         </div>
                                         <div class="profile-info__follow-state">
                                             <div class="profile-info__follow-state__text">
+                                                <a th:href="@{/member/allFollow/{memberId}(memberId=${mprofile?.memberId})}">
                                                 <span>팔로워
                                                     <span class="highlight" th:text="${followCount}"></span>
                                                 </span>
                                             </div>
                                             <div class="profile-info__follow-state__vertical-bar"></div>
                                             <div class="profile-info__follow-state__text">
+                                                <a th:href="@{/member/allFollowing/{memberId}(memberId=${mprofile?.memberId})}">
                                                 <span>팔로잉
                                                     <span class="highlight" th:text="${followingCount}"></span>
                                                 </span>
