--- a/src/main/resources/static/css/chatting.css
+++ b/src/main/resources/static/css/chatting.css
@@ -109,7 +109,7 @@
     background: #ecf1f8;
     font-size: 13px;
     border-radius: 5px;
-    margin-bottom: 3px;
+    margin-top: 3px;
 }
 .chat-messages .from{
     float: left;
