--- a/src/main/resources/templates/th/main/storeNewBest.html
+++ b/src/main/resources/templates/th/main/storeNewBest.html
@@ -25,7 +25,7 @@
                    <li class="nav-link ranking-type-filter__item ranking-type-filter__item--right right--active">신제품 베스트</li></a>
             </ol>
 
-            <span class="ranking__explain">최근 한달내의 신상품 중 베스트 100위입니다.</span>
+            <span class="ranking__explain">최근 한달내에 나온 신상품 중 베스트 순위입니다.</span>
 
             <div class="virtualized-list ranking-feed__content row" id="newBest"
                  style="padding-top: 0px; transform: translateY(0px);">
