--- a/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberInfo.html
@@ -16,18 +16,18 @@
                     <!-- DataTales Example -->
                     <div class="card card-info">
                         <div class="card-body">
-                            <div class="table-responsive">
+                            <div class="table table-hover">
                                 회원 정보
                                 <table id="userTable">
                                     <thead>
                                     <tr>
                                         <th>count</th>
-                                        <th>memberName</th>
-                                        <th>memberId</th>
-                                        <th>memberAddr</th>
-                                        <th>memberEmail</th>
-                                        <th>getOrderQty</th>
-                                        <th>getTotalPrice</th>
+                                        <th>이름</th>
+                                        <th>아이디</th>
+                                        <th>주소</th>
+                                        <th>이메일</th>
+                                        <th>주문 수량</th>
+                                        <th>총액</th>
                                     </tr>
                                     </thead>
                                     <tbody>
