--- a/src/main/resources/templates/th/admin/statAdmin/productManagement.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productManagement.html
@@ -17,18 +17,18 @@
                         <div class="card-body">
                             <div class="table-responsive">
                                 제품관리
-                                <table id="userTable" border="1">
+                                <table class="table table-hover">
                                     <thead>
                                     <tr>
                                         <th>count</th>
-                                        <th>productNo</th>
-                                        <th>sellerName</th>
-                                        <th>productName</th>
-                                        <th>modelName</th>
+                                        <th>상품번호</th>
+                                        <th>업체</th>
+                                        <th>상품</th>
+                                        <th>모델명</th>
                                         <th>customerPrice</th>
                                         <th>sellPrice</th>
                                         <th>purchasePrice</th>
-                                        <th>productCreateDate</th><!--
+                                        <th>만든날짜</th><!--
         <th>payCode</th>
         <th>orderCode</th>-->
 
