--- a/src/main/resources/templates/th/fragments/adminHeader.html
+++ b/src/main/resources/templates/th/fragments/adminHeader.html
@@ -37,6 +37,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="dropdown-item" th:href="@{/admin/productManagement}">제품등록내역</a>
                                     <a class="dropdown-item" th:href="@{/admin/productSalesVolume}">제품판매관리</a>
+                                    <a class="dropdown-item" th:href="@{/admin/popularityProduct}">인기상품</a>
                                 </div>
                             </li>
 
