--- a/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
+++ b/src/main/resources/templates/th/admin/statAdmin/memberOrderList.html
@@ -17,18 +17,18 @@
                         <div class="card-body">
                             <div class="table-responsive">
                                 회원 주문내역
-                                <table id="userTable" border="1">
+                                <table class="table table-hover">
                                     <thead>
                                     <tr>
                                         <th>count</th>
-                                        <th>orderNo</th>
-                                        <th>memberId</th>
-                                        <th>colorName</th>
-                                        <th>orderQty</th>
-                                        <th>totalPrice</th>
-                                        <th>recipient</th>
-                                        <th>orderAddr</th>
-                                        <th>orderDate</th><!--
+                                        <th>주문번호</th>
+                                        <th>회원아이디</th>
+                                        <th>컬러</th>
+                                        <th>수량</th>
+                                        <th>총액</th>
+                                        <th>주문자</th>
+                                        <th>주소</th>
+                                        <th>주문일</th><!--
         <th>payCode</th>
         <th>orderCode</th>-->
 
