--- a/src/main/resources/templates/th/admin/statAdmin/popularityProduct.html
+++ b/src/main/resources/templates/th/admin/statAdmin/popularityProduct.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/adminLayout">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{/plugins/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 <body>
+<div class="container" id="wrapper">
+    <div layout:fragment="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- DataTales Example -->
+                    <div class="card card-info">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                제품관리
+                                <table class="table table-hover">
+                                    <thead>
+                                    <tr>
+                                        <th>count</th>
+                                        <th>업체</th>
+                                        <th>상품</th>
+                                        <th>수량</th>
 
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="list, stat : ${orderListVOList}">
+                                        <td th:text="${stat.count}">1</td>
+                                        <td th:text="${list.sellerName}">마</td>
+                                        <td th:text="${list.productName}">마</td>
+                                        <td th:text="${list.orderQty}">마</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
