--- a/src/main/resources/templates/th/member/basket/memberBasket.html
+++ b/src/main/resources/templates/th/member/basket/memberBasket.html
@@ -132,17 +132,17 @@
                                                                                     <div class="input-group select-input option-count-input">
                                                                                         <select class="form-control">
 
-                                                                                            <option value="0">1</option>
-                                                                                            <option value="1">2</option>
-                                                                                            <option value="2">3</option>
-                                                                                            <option value="3">4</option>
-                                                                                            <option value="4">5</option>
-                                                                                            <option value="5">6</option>
-                                                                                            <option value="6">7</option>
-                                                                                            <option value="7">8</option>
-                                                                                            <option value="8">9</option>
-                                                                                            <option value="9">10</option>
-                                                                                            <option value="10" selected th:text="${list.qty}"></option>
+                                                                                            <option value="1">1</option>
+                                                                                            <option value="2">2</option>
+                                                                                            <option value="3">3</option>
+                                                                                            <option value="4">4</option>
+                                                                                            <option value="5">5</option>
+                                                                                            <option value="6">6</option>
+                                                                                            <option value="7">7</option>
+                                                                                            <option value="8">8</option>
+                                                                                            <option value="9">9</option>
+                                                                                            <option value="10">10</option>
+                                                                                            <option value="${list.qty}" selected th:text="${list.qty}"></option>
                                                                                             </option>
                                                                                         </select><span
                                                                                             class="select-input__icon"><svg
