--- a/src/main/resources/static/css/productPage.css
+++ b/src/main/resources/static/css/productPage.css
@@ -77,12 +77,44 @@ text-decoration: line-through;
     font-weight: 700;
 }
 
+#inputGroupSelect01{
+    margin-bottom: 15px;
+}
 
-.col-md-7{
+#details{
     padding-left: 110px;
 }
 
 #pills-tab {
-    border: 1px solid lightgrey;
-    border-radius: 5px;
+    border-bottom: 1px solid lightgrey;
+    border-top: 1px solid lightgrey;
+}
+
+.stars-outer {
+    display: inline-block;
+    position: relative;
+    font-family: FontAwesome;
+}
+
+.stars-outer::before {
+    content: "\f006 \f006 \f006 \f006 \f006";
+}
+
+.stars-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+}
+
+.stars-inner::before {
+    content: "\f005 \f005 \f005 \f005 \f005";
+    color: #f8ce0b;
+}
+
+
+.attribution:hover {
+    color: #1fa67a;
 }
