--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -131,58 +131,13 @@
                              onclick="currentDiv(4)">
                     </div>
                 </div>
-
-                <!--            <div class="col-md-4">-->
-                <!--                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">-->
-                <!--                    <div class="carousel-inner">-->
-                <!--                        <div class="carousel-item active" th:if="${product.productMainImg}">-->
-                <!--                            <img th:src="@{'/uploadImg/'+${product.productMainImg}}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-                <!--                        <div class="carousel-item active" th:unless="${product.productMainImg}">-->
-                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-
-                <!--                        <div class="carousel-item" th:if="${product.productSubImg1}">-->
-                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg1}}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-                <!--                        <div class="carousel-item" th:unless="${product.productSubImg1}">-->
-                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-
-                <!--                        <div class="carousel-item" th:if="${product.productSubImg2}">-->
-                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg2}}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-                <!--                        <div class="carousel-item" th:unless="${product.productSubImg2}">-->
-                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-
-                <!--                        <div class="carousel-item" th:if="${product.productSubImg3}">-->
-                <!--                            <img th:src="@{'/uploadImg/'+${product.productSubImg3}}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-                <!--                        <div class="carousel-item" th:unless="${product.productSubImg3}">-->
-                <!--                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">-->
-                <!--                        </div>-->
-
-                <!--                        <input type="hidden" id="productName" th:value="${product.productName}">-->
-                <!--                        <input type="hidden" id="productNo" th:value="${product.productNo}">-->
-
-                <!--                    </div>-->
-                <!--                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">-->
-                <!--                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-                <!--                        <span class="sr-only">Previous</span>-->
-                <!--                    </a>-->
-                <!--                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">-->
-                <!--                        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-                <!--                        <span class="sr-only">Next</span>-->
-                <!--                    </a>-->
-                <!--                </div>-->
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7" id="details">
                 <div class="production-item-stats">
                     <h1 class="production-selling-header__title"><p
                             class="production-selling-header__title__brand-wrap">
                         <a class="production-selling-header__title__brand"
-                            href="" th:value="${product.productNo}" th:text="${product.sellerName}"></a>
+                           href="" th:value="${product.productNo}" th:text="${product.sellerName}"></a>
                     </p><span class="production-selling-header__title__name" th:value="${product.productName}"
                               th:text="${product.productName}" th:id="pName"></span>
                     </h1>
@@ -253,35 +208,69 @@
 
                 <div class="tab-pane fade" id="pills-reviews" role="tabpanel"
                      aria-labelledby="pills-reviews-tab">
+                    <div class="card-columns">
+                        <div class="card my-3" style="width: 18rem;" th:each="reviews, iter :${reviewList}">
+                            <div th:id="'carouselExampleFade_' + ${iter.count}" class="carousel slide carousel-fade"
+                                 data-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active card-img-top" th:if="${reviews.reviewImg1}">
+                                        <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="d-block w-100"
+                                             alt="...">
+                                    </div>
+                                    <div class="carousel-item active card-img-top" th:unless="${reviews.reviewImg1}">
+                                        <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                             class="d-block w-100"
+                                             alt="...">
+                                    </div>
 
-                    <div class="card mb-3" th:each="reviews:${reviewList}" style="max-width: 540px;">
-                        <div class="row no-gutters">
-                            <div class="col-md-2">
-                                <div >
-                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="card-img" alt="...">
+                                    <div class="carousel-item card-img-top" th:if="${reviews.reviewImg2}">
+                                        <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}" class="d-block w-100"
+                                             alt="...">
+                                    </div>
+                                    <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg2}">
+                                        <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                             class="d-block w-100"
+                                             alt="...">
+                                    </div>
+
+                                    <div class="carousel-item card-img-top" th:if="${reviews.reviewImg3}">
+                                        <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}" class="d-block w-100"
+                                             alt="...">
+                                    </div>
+                                    <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg3}">
+                                        <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                             class="d-block w-100"
+                                             alt="...">
+                                    </div>
+
                                 </div>
-                                <div>
-                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}" class="card-img" alt="...">
-                                </div>
-                                <div>
-                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}" class="card-img" alt="...">
-                                </div>
+                                <a class="carousel-control-prev" th:href="@{'#carouselExampleFade_' + ${iter.count}}"
+                                   role="button"
+                                   data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" th:href="@{'#carouselExampleFade_' + ${iter.count}}"
+                                   role="button"
+                                   data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
                             </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h3 class="card-title" th:text="${reviews.memberId}"></h3>
-                                    <label>모델명:</label>
-                                    <h4 class="card-text" th:text="${reviews.modelName}"></h4>
-                                    <label>색상:</label>
-                                    <h4 class="card-text" th:text="${reviews.colorName}"></h4>
-                                    <p class="card-text" th:text="${reviews.reviewContent}"></p>
-                                    <p class="card-text"><small class="text-muted"
-                                                                th:text="${reviews.orderConfirmDate}"></small></p>
-                                </div>
+                            <div class="card-body">
+                                <h3 class="card-title" th:text="${reviews.memberId}"></h3>
+                                <label>모델명:</label>
+                                <h4 class="card-text" th:text="${reviews.modelName}"></h4>
+                                <label>색상:</label>
+                                <h4 class="card-text" th:text="${reviews.colorName}"></h4>
+                                <p class="card-text" th:text="${reviews.reviewContent}"></p>
+                                <p class="card-text"><small class="text-muted"
+                                                            th:text="${reviews.orderConfirmDate}"></small></p>
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
                     <table class="table table-sm">
                         <tbody>
