--- a/src/main/resources/templates/th/admin/statAdmin/sellerDetail.html
+++ b/src/main/resources/templates/th/admin/statAdmin/sellerDetail.html
@@ -8,18 +8,56 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <div class="form-group">
-        <h2>거래처 상세</h2><br>
-        <tr>
-            <p>업체아이디</p><th:block th:text="${sellerDetail.sellerId}"/><br>
-            <p>업체명</p><th:block th:text="${sellerDetail.sellerName}"/><br>
-            <p>사업자등록번호</p><th:block th:text="${sellerDetail.sellerRes}"/><br>
-            <p>업체홈페이지</p><th:block th:text="${sellerDetail.sellerUrl}"/><br>
-            <p>영업담당자</p><th:block th:text="${sellerDetail.sellerManager}"/><br>
-            <p>전화번호</p><th:block th:text="${sellerDetail.managerTel}"/><br>
-            <p>이메일</p><th:block th:text="${sellerDetail.managerEmail}"/><br>
-            <p>주소</p><th:block th:text="${sellerDetail.sellerAddr}"/><br>
-        </tr>
+    <div class="container">
+        <div class="login_wrapper">
+            <div class="row justify-content-center">
+                <div class="col-md-5 col-xs-10 md-auto">
+                    <div class="mt-4 mb-3">
+                        <label for="sellerId">업체아이디<span class="text-muted"></span></label>
+                        <input type="text" class="form-control" id="sellerId" name="sellerId"
+                               th:value="${sellerDetail.sellerId}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                    <div class="mb-4">
+                        <label for="sellerPw">업체명<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="sellerPw" name="sellerPw"
+                            th:value="${sellerDetail.sellerName}" style="background-color: #FFFFFF;" readonly>
+
+                    </div>
+                    <div class="mb-4">
+                        <label for="sellerName">사업자등록번호<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="sellerName" name="sellerName"
+                            th:value="${sellerDetail.sellerRes}" style="background-color: #FFFFFF;" readonly>
+
+                    </div>
+                    <div class="mb-4">
+                        <label for="sellerRes">업체홈페이지<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="sellerRes" name="sellerRes"
+                            th:value="${sellerDetail.sellerUrl}" style="background-color: #FFFFFF;" readonly>
+
+                    </div>
+                    <div class="mb-4">
+                        <label for="sellerUrl">영업담당자<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="sellerUrl" name="sellerUrl"
+                            th:value="${sellerDetail.sellerManager}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                    <div class="mb-4">
+                        <label for="managerTel">전화번호<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="managerTel" name="managerTel"
+                            th:value="${sellerDetail.managerTel}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                    <div class="mb-4">
+                        <label for="managerEmail">이메일<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="managerEmail" name="managerEmail"
+                            th:value="${sellerDetail.managerEmail}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                    <div class="mb-4">
+                        <label for="managerEmail">주소<span class="text-muted"></span></label> <input
+                            type="text" class="form-control" id="addr" name="addr"
+                            th:value="${sellerDetail.sellerAddr}" style="background-color: #FFFFFF;" readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
