--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -95,5 +95,19 @@ body {
     border: 0;
 }
 
+.button-css{
+    box-sizing: border-box;
+    width: 74px;
+    padding: 4px 0 6px;
+    background: none;
+    border: 1px solid #35c5f0;
+    border-radius: 16px;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+    color: #09addb;
+    text-align: center;
+    transition: background .1s,color .1s;
+}
 
 
