--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -76,7 +76,7 @@
                                                name="index" id="index" th:value="${index?:''}" onfocus="this.value=''">
 
                                         <div class="input-group-append">
-                                            <button class="btn btn-navbar" type="submit">
+                                            <button class="btn btn-navbar mr-2" type="submit">
                                                 <i class="fas fa-search"></i>
                                             </button>
                                         </div>
@@ -90,7 +90,7 @@
                             <div sec:authorize="!hasAnyRole('ROLE_ADMIN', 'ROLE_SELLER')">
                                 <li class="nav-item">
                                     <a class="nav-link" th:href="@{/basket}">
-                                    <span class="asdf" style="font-size: 16px; color: black;">
+                                    <span class="asdf" style="font-size: 20px; color: black;">
                                         <i class="fas fa-shopping-cart mr-2"></i>
                                     </span>
                                     </a>
@@ -98,22 +98,28 @@
                             </div>
 
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogin}">
-                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>
+                                <input sec:authorize="isAnonymous()" type="submit" class="button-css mr-3" value="로그인">
+
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">
-                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>
+                                <input sec:authorize="isAuthenticated()" type="submit" class="button-css mr-3" style="border: 1px solid red; color:red;" value="로그아웃">
+<!--                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>-->
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/signup}">
-                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
+                                <input sec:authorize="isAnonymous()" type="submit" class="button-css mr-3" value="회원가입">
+<!--                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>-->
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/member/myBoard}">
-                                <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
+                                <input sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')"  type="submit" class="button-css mr-3" style="border: 1px solid red; color:red;" value="마이페이지">
+<!--                                <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>-->
                             </form>
                             <form class="form-inline my-2 my-lg-0" th:action="@{/admin/spendingPattern}">
-                                <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>
+                                <input sec:authorize="hasRole('ROLE_ADMIN')"  type="submit" class="button-css mr-3" style="border: 1px solid red; color:red;" value="관리자홈">
+<!--                                <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>-->
                             </form>
                             <form class="form-inline my-2 my-lg-0" th:action="@{/seller/sellerInfo}">
-                                <button sec:authorize="hasRole('ROLE_SELLER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈</button>
+                                <input sec:authorize="hasRole('ROLE_SELLER')"  type="submit" class="button-css mr-3" style="border: 1px solid red; color:red;"value="업체홈">
+<!--                                <button sec:authorize="hasRole('ROLE_SELLER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈</button>-->
                             </form>
                         </ul>
 
