--- a/src/main/resources/templates/th/seller/productList.html
+++ b/src/main/resources/templates/th/seller/productList.html
@@ -20,7 +20,7 @@
                         <div class="image">
                             <!--                                <img th:src="${sellerInfo.sellerImg}"-->
                             <img th:src="@{'/uploadImg/'+${sellerInfo.sellerImg}}"
-                                 class="rounded-circle width=50px height=50px"
+                                 class="img-circle elevation-2" style="width:40px; height:40px;"
                                  alt="User Image">
                             <a th:text="${sellerInfo.sellerName}" th:href="@{/seller/sellerInfo}"></a>
                         </div>
