0702 게시판 데이터 1차 등록 완

--- a/src/main/resources/templates/th/member/mypage/profile/allPhoto.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allPhoto.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <div class="container">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
 <div class="container store-index-section store-index-product-list"><h1>사진</h1>
@@ -35,6 +36,7 @@
             </div>
         </tr>
     </div>
+</div>
 </div>
 </div>
 </body>
