--- a/src/main/resources/templates/th/member/mypage/profile/allScrap.html
+++ b/src/main/resources/templates/th/member/mypage/profile/allScrap.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+    <div class="container">
     <th:block th:replace="th/fragments/navBar_myPage"></th:block>
     <th:block th:replace="th/fragments/navBar_myPage_profile"></th:block>
     <div class="container store-index-section store-index-product-list"><h1>스크랩</h1>
@@ -34,6 +35,7 @@
             </tr>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
