--- a/src/main/resources/templates/th/member/payment/nonMemberPayment.html
+++ b/src/main/resources/templates/th/member/payment/nonMemberPayment.html
@@ -79,9 +79,19 @@
                                     </div>
                                 </th:block>
                                 <th:block th:unless="${nonMemberBasketList != null}">
+                                    <input type="hidden" name="orderQty"  th:value=1><br>
+                                    <input type="hidden" name="productNo" id="productNo"
+                                           th:value="${productVO.productNo}"><br>
+                                    <input type="hidden" name="colorName" id="colorName"
+                                           th:value="${productVO.colorVO.colorType}"><br>
+                                    <input type="hidden" name="totalPrice" id="totalPrice"
+                                           th:value="${productVO.purchasePrice}"><br>
+                                    <input type="hidden" name="productName" id="productName"
+                                           th:value="${productVO.productName}">
                                     <div class="information">
                                         <img th:src="@{'/uploadImg/'+${productVO.getProductMainImg()}}" alt="320">
                                         <div>
+                                            <input type="text" value="이건 바로가기"> 아하하하하하하ㅏ
                                             <div class="name" id="productNameTest"
                                                  th:text="${productVO.productName}"></div>
                                             <div class="option" th:text="${productVO.colorVO.colorType}"></div>
@@ -391,6 +401,8 @@
                 //IMP.request_pay(param, callback) 호출
                 console.log("실험 : " + $('#order_payer_email').val() + $('#order_payer_name').val() + $('#order_payer_phone_number').val()
                     + $('#order_received_at').val());
+                console.log("프로덕트No" + $('#productNo').val()+"colorName : " +$('#colorName').val()+"totalPrice : "+ $('#totalPrice').val()
+                + "큐티와"+$('#orderQty').val());
                 IMP.request_pay({ // param
                     pg: "inicis",
                     pay_method: "card",
@@ -411,6 +423,8 @@
                         nowTime += '-' + (now.getMonth() + 1);
                         nowTime += '-' + now.getDate();
                         console.log(now + " nowTime" + nowTime);
+
+
                         /*var source = {
                         orderNo : nowTime+"-2599",
                         productNo : $('#productNo').val(),
@@ -449,7 +463,7 @@
                             },
                             success: function () {
                                 alert("결제가 완료되었습니다.홈으로 이동합니다.");
-                                //location.href = "/";
+                                location.href = "/";
                                 console.log("세션을 삭제합니다");
                                 localStorage.removeItem("saveL");
                             },
