--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -434,7 +434,7 @@
                         ,
                         success: function (e) {
                             console.log("basketMem 완료")
-                            window.open('/basketPop', '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px');
+                            window.open('/basketPop', '_blank', 'width=auto,height=auto,resizable=no,scrollbars=no,status=no,left=0px,top=0px');
                         },
                         error: function () {
                             console.log("test err");
