--- a/src/main/resources/templates/th/member/basket/nonMemberBasket.html
+++ b/src/main/resources/templates/th/member/basket/nonMemberBasket.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
         <link rel="stylesheet" th:href="@{/css/basket.css}">
     </th:block>
-
+</head>
 <body>
 
 <div layout:fragment="content">
