0702 게시판 데이터 1차 등록 완

--- a/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
+++ b/src/main/resources/templates/th/member/mypage/profile/receiveNote.html
@@ -29,7 +29,7 @@
             </nav>
         </div>
         <br>
-        <form action="/noteSending" method="post" id="sending" name="sending">
+        <form action="/member/noteSending" method="post" id="sending" name="sending">
 
             <input type="button" id="send" name="send"
                    class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow"
